fix shift

--- a/src/App.css
+++ b/src/App.css
@@ -95,15 +95,16 @@ html, body {
     font-family: sans-serif;
     margin-top: 20vh;
     margin-bottom: 20vh;
+    
 }
 
 .App-header img {
   border-radius: 100px;
+  margin-right: 5px;
 }
 
 .header-links {
-  display: flex;
-    align-items: center;
+  margin-left: 5px;
 }
 
 .header-links img {
@@ -123,7 +124,7 @@ html, body {
 
 .App-header > div {
   display: flex;
-  margin-left: 15px;
+  margin-left: 10px;
   flex-direction: column;
   align-items: center;
 }
